# customer-service-agent

./: .env.example  .gitignore  README.md  instructions.md  pyproject.toml
.cursor/plans/: bonus-a-streamlit-ui_a38e3c3a.plan.md  bonus-b-query-recommender_491ae367.plan.md  cs-agent-master-plan_809e184c.plan.md  task-1-initial-agent_6878dc68.plan.md  task-2-memory_f3d2a1c9.plan.md  task-3-mcp_a47c1b08.plan.md
.cursor/rules/: fon_code_rules.mdc  fon_repo_data.mdc  fon_repo_map.mdc
.fon/check/: config.yaml
.fon/schemas/: checks-schema.json  user-defined-rule-schema.json
.fon/workdir/: check-handoff.json
assets/cover/: image-prompt.txt
scripts/: _bonus_b_checks.py  _verifier_runner.py  verify_bonus_a.py  verify_bonus_b.py  verify_task1.py  verify_task2.py  verify_task3.py
src/cs_agent/: __init__.py  cli.py  config.py  llm.py
src/cs_agent/agent/: __init__.py  graph.py  nodes.py  prompts.py  recommender.py  router.py  state.py
src/cs_agent/data/: __init__.py  loader.py
src/cs_agent/mcp_server/: __init__.py  server.py
src/cs_agent/memory/: __init__.py  checkpoint.py  profile.py
src/cs_agent/tools/: __init__.py  catalog.py  filter.py  registry.py  schemas.py  summarize.py
src/cs_agent/ui/: __init__.py  rendering.py  streamlit_app.py
tests/: test_agent_integration.py  test_checkpoint.py  test_episodic_integration.py  test_mcp_integration.py  test_mcp_server.py  test_profile.py  test_profile_integration.py  test_router.py  test_tools.py  test_tools_integration.py
