[project]
name = "cs-agent"
version = "0.1.0"
description = "Customer Service Data Analyst Agent (Bitext) — LangGraph ReAct + FastMCP"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ofir Nesher" }]
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "pydantic>=2.7",
    "pandas>=2.2",
    "pyarrow>=15",
    "datasets>=2.20",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0", "langchain-mcp-adapters>=0.2"]
ui = ["streamlit>=1.36"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
cs-agent = "cs_agent.cli:main"
cs-agent-mcp = "cs_agent.mcp_server.server:main"
cs-agent-ui = "cs_agent.ui.streamlit_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cs_agent"]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["cs_agent"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
markers = [
    "integration: tests that exercise the live Bitext DataFrame and/or live Nebius LLM calls (slower; require network for LLM)",
]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
